<resources>
    <string name="app_name">BookBuy</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_record">Record</string>

    <string name="record">Record</string>
    <string name="menu_home">Home</string>
    <string name="menu_account">Account</string>
    <string name="menu_deposit">Deposit</string>
    <string name="menu_notice">Notice</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="action_login">login</string>
    <string name="cancel">cancel</string>
    <string name="clear">clear</string>

    <string-array name="deposit_array">
        <item>選擇儲值方式...</item>
        <item>Bank</item>
        <item>Credit Card</item>

    </string-array>
    <string-array name="item_array">
        <item>展覽活動</item>
        <item>書籍</item>
        <item>文具</item>

    </string-array>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="large_text">
        "一、認知與接受條款 \n\n"
        "1.BookBuy數位科技股份有限公司(以下簡稱「BookBuy」)係依據本服務條款提供BookBuy（http://www.books.com.tw）服務 (以下簡稱「本服務」)。"
        當會員完成BookBuy之會員註冊手續、或開始使用本服務時，即表示已閱讀、瞭解並同意接受本服務條款之所有內容，並完全接受本服務現有與未來衍生的服務項目及內容。
        BookBuy公司有權於任何時間修改或變更本服務條款之內容，修改後的服務條款內容將公佈網站上，BookBuy將不會個別通知會員，建議會員隨時注意該等修改或變更。
        會員於任何修改或變更後繼續使用本服務時，視為會員已閱讀、瞭解並同意接受該等修改或變更。若不同意上述的服務條款修訂或更新方式，或不接受本服務條款的其他任一約定，會員應立即停止使用本服務。\n\n"

        "2.若會員為未滿二十歲之未成年人，應於會員的家長（或監護人）閱讀、瞭解並同意本約定書之所有內容及其後修改變更後，方得註冊為會員、使用或繼續使用本服務。當會員使用或繼續使用BookBuy時，即推定會員的家長（或監護人）已閱讀、瞭解並同意接受本約定書之所有內容及其後修改變更。"

        "3.會員及BookBuy雙方同意使用本服務之所有內容包括意思表示等，以電子文件作為表示方式。"

        "4.為了確保會員之個人資料、隱私及消費者權益之保護，於交易過程中將使用會員之個人資料，謹依個人資料保護法第8條規定告知以下事項：\n"

        "蒐集之目的："
        "蒐集之目的在於進行行銷業務、消費者、客戶管理與服務、網路購物及其他電子商務服務及與調查、統計與研究分析(法定特定目的項目編號為Ｏ四Ｏ、Ｏ九Ｏ、一四八、一五七)。BookBuy將藉由加入會員之過程或進行交易之過程來蒐集個人資料。\n"
        "蒐集之個人資料類別："
        "BookBuy於網站內蒐集的個人資料包括，"
        "(1) C001辨識個人者： 如會員之姓名、地址、電話、電子郵件等資訊。"
        "(2) C002辨識財務者： 如信用卡或金融機構帳戶資訊。"
        "(3) C011個人描述：例如：性別、出生年月日等。"
        "利用期間、地區、對象及方式：\n"
        "(1) 期間：會員當事人要求停止使用或BookBuy停止提供服務之日為止。"
        "(2) 地區：會員之個人資料將使用於台灣地區。"
        "(3) 利用對象及方式：會員之個人資料蒐集除用於BookBuy之會員管理、客戶管理之檢索查詢等功能外，亦將利用於辨識身份、金流服務、物流服務、行銷廣宣等。例示如下：\n"
        "a. 以會員身份使用BookBuy提供之各項服務時，於頁面中自動顯示會員資訊。"
        "b. 為遂行交易行為：會員對商品或勞務為預約、下標、購買、參與贈獎等之活動或從事其他交易時，關於商品配送、勞務提供、價金給付、回覆客戶之詢問、BookBuy對會員之詢問、相關售後服務及其他遂行交易所必要之業務。"
        "c. 宣傳廣告或行銷等：提供會員各種電子雜誌等資訊、透過電子郵件、郵件、電話等提供與服務有關之資訊。將會員所瀏覽之內容或廣告，依客戶之個人屬性或購買紀錄、BookBuy網站之瀏覽紀錄等項目，進行個人化作業、會員使用服務之分析、新服務之開發或既有服務之改善等。針對民調、活動、留言版等之意見，或其他服務關連事項，與會員進行聯繫。"
        "d. 回覆客戶之詢問：針對會員透過電子郵件、郵件、、傳真、電話或其他任何直接間接連絡方式向BookBuy所提出之詢問進行回覆。"
        "e. 其他業務附隨之事項：附隨於上述a至d.之利用目的而為BookBuy提供服務所必要之使用。"
        "f. 對於各別服務提供者之資訊提供：會員對服務提供者之商品或勞務為預約、下標、購買、參加贈獎活動或申請其他交易時，BookBuy於該交易所必要之範圍內，得將會員之個人資料檔案提供予服務提供者，並由服務提供者負責管理該個人資料檔案。BookBuy將以規約課予服務提供者依保障會員隱私權之原則處理個人資料之義務，但無法保證服務提供者會必然遵守。詳細內容，請向各別服務提供者洽詢。"
        "g. 其他：提供個別服務時，亦可能於上述規定之目的以外，利用個人資料。此時將在該個別服務之網頁載明其要旨。"

        "會員就個人資料之權利：\n"
        "BookBuy所蒐集個人資料之當事人，依個人資料保護法得對BookBuy行使以下權利：\n"
        "(1) 查詢或請求閱覽。"
        "(2) 請求製給複製本。"
        "(3) 請求補充或更正。"
        "(4) 請求停止蒐集、處理或利用。"
        "(5) 請求刪除。"
        "會員如欲行使上述權利，可與BookBuy客服連絡進行申請。"
        "請注意！如拒絕提供加入會員所需必要之資料，將可能導致無法享受完整服務或完全無法使用該項服務。\n\n"

        "二、會員的註冊義務\n"
        "為了能使用本服務，會員同意以下事項：\n"

        "依本服務註冊表之提示提供會員本人正確、最新的資料，且不得以第三人之名義註冊為會員。每位會員僅能註冊登錄一個帳號，不可重覆註冊登錄。
        即時維持並更新會員個人資料，確保其正確性，以獲取最佳之服務。
        若會員提供任何錯誤或不實的資料、或未按指示提供資料、或欠缺必要之資料、或有重覆註冊帳號等情事時，BookBuy有權不經事先通知，逕行暫停或終止會員的帳號，並拒絕會員使用本服務之全部或一部。\n\n"

        "三、BookBuy隱私權政策\n"
        "關於會員的註冊以及其他特定資料依BookBuy「隱私權政策」受到保護與規範。\n\n"

        "四、會員帳號、密碼及安全\n\n"
        "1.完成本服務的登記程序之後，會員將取得一個特定之密碼及會員帳號，維持密碼及帳號之機密安全，是會員的責任。任何依照規定方法輸入會員帳號及密碼與登入資料一致時，無論是否由本人親自輸入，均將推定為會員本人所使用，利用該密碼及帳號所進行的一切行動，會員本人應負完全責任。\n"

        "2.會員同意以下事項：\n"

        "會員的密碼或帳號遭到盜用或有其他任何安全問題發生時，會員將立即通知BookBuy
        每次連線完畢，均結束會員的帳號使用。
        會員的帳號、密碼及會員權益均僅供會員個人使用及享有，不得轉借、轉讓他人或與他人合用。
        帳號及密碼遭盜用、不當使用或其他BookBuy無法辯識是否為本人親自使用之情況時，對此所致之損害，除證明係因可歸責於BookBuy之事由所致，BookBuy將不負任何責任。
        BookBuy若知悉會員之帳號密碼確係遭他人冒用時，將立即暫停該帳號之使用(含該帳號所生交易之處理)。\n\n"


    </string>

    <string name="record_text">
        "      展覽活動 : 480\n"
        "      書籍 : 390\n"
        "      文具 : 250\n"
        "          共消費 1120 元\n"
    </string>

</resources>